feat: use #ddd color in all footer text elements (LIS-115)

--- a/decidim-module-gdynia/app/packs/stylesheets/decidim/gdynia/gdynia.scss
+++ b/decidim-module-gdynia/app/packs/stylesheets/decidim/gdynia/gdynia.scss
@@ -18,6 +18,14 @@
 
 /************* footer *************/
 
+.main-footer {
+  a,
+  p,
+  h2 {
+    color: #ddd;
+  }
+}
+
 .ue-footer {
   padding: 5px 0 15px 0;
   background-color: #fff;
