--- a/decidim-module-gdynia/app/packs/stylesheets/decidim/gdynia/gdynia.scss
+++ b/decidim-module-gdynia/app/packs/stylesheets/decidim/gdynia/gdynia.scss
@@ -54,6 +54,75 @@
   vertical-align: text-bottom;
 }
 
+/************* register form *************/
+
+.password-rules {
+  display: none;
+  background-color: #f2f2f2;
+  padding: 24px 20px;
+  margin-bottom: 1em;
+  font-size: 14px;
+
+  h6 {
+    font-weight: bold;
+    color: black;
+    font-size: 14px;
+  }
+
+  ul {
+    list-style-type: none;
+    margin-left: 0;
+    margin-bottom: 0;
+
+    li {
+      display: flex;
+      align-items: center;
+      margin-top: 6px;
+
+      .password-rule-result {
+        width: 14px;
+        height: 14px;
+        margin-right: 8px;
+        position: relative;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+
+        &::before {
+          content: "";
+          position: absolute;
+          background-color: black;
+          border-radius: 50%;
+          width: 5px;
+          height: 5px;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+
+      &.password-rule-success .password-rule-result {
+        &::before {
+          content: unset;
+        }
+        background-image: url("images/decidim/gdynia/check-colored.svg");
+      }
+
+      &.password-rule-error .password-rule-result {
+        &::before {
+          content: unset;
+        }
+        background-image: url("images/decidim/gdynia/error-colored.svg");
+      }
+    }
+  }
+}
+
+/* Show password rules only on the registration form */
+#register-form .password-rules {
+  display: block;
+}
+
 /************* ADMIN *************/
 
 /************* autocomplete sticky selection fix *************/
