--- a/decidim-module-gdynia/app/packs/stylesheets/decidim/gdynia/gdynia.scss
+++ b/decidim-module-gdynia/app/packs/stylesheets/decidim/gdynia/gdynia.scss
@@ -119,6 +119,12 @@
 }
 
 
+/************* general components *************/
+
+.button__secondary {
+  background-color: #f4bf55 !important;
+}
+
 /* Show password rules only on the registration form */
 #register-form .password-rules {
   display: block;
