--- a/decidim-module-gdynia/app/packs/stylesheets/decidim/gdynia/gdynia.scss
+++ b/decidim-module-gdynia/app/packs/stylesheets/decidim/gdynia/gdynia.scss
@@ -16,6 +16,13 @@
   background-image: var(--hero-image);
 }
 
+h1.hero__title {
+  @media only screen and (max-width: 1024px) {
+    font-size: 32px !important;
+    line-height: 1.25;
+  }
+}
+
 /************* footer *************/
 
 .main-footer {
